# mini-compiler-variant-5

./: .gitignore  CMakeLists.txt  GIT_UPLOAD_INSTRUCTIONS.md  README.md  README_BEGINNER_RU.md  ~$чёт_мини_компилятор_вариант_5_по_образцу.docx  Инструкция_скриншоты_вариант_5.md  Отчёт_мини_компилятор_вариант_5.docx  Отчёт_мини_компилятор_вариант_5_по_образцу.docx
runtime/: main.c
scripts/: run_tests.sh
src/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  driver.cpp  lexer.l  parser.y  sema.cpp  sema.hpp
tests/: 01_return_literal.mc  02_arithmetic.mc  03_if_else.mc  04_for.mc  05_do_while_sum.mc  06_do_while_at_least_once.mc  07_do_while_power.mc  08_type_error.mc  09_undeclared_variable.mc  10_short_circuit.mc  11_function_call.mc  12_float_arithmetic.mc  13_float_type_error.mc  14_parse_missing_semicolon.mc  15_parse_bad_do_while.mc  16_lex_invalid_character.mc  17_missing_compiled_fn.mc  18_bad_compiled_signature.mc  test.mc
tools/: make_report.py  make_report_variant5.py  make_report_variant5_like_example.py  patch_existing_report.py
